crates/es-fluent-derive/tests/ui/fluent_choice_invalid_generated_value.rs
use es_fluent_derive::EsFluentChoice;

#[derive(EsFluentChoice)]
#[fluent_choice(rename_all = "Title Case")]
pub enum Severity {
    VeryHigh,
}

fn main() {}
